# devdns

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  TODO.md  getpdns.sh  init.sh  run.sh
api_wrapper/: Dockerfile  requirements.txt  setup.py  unit.json
api_wrapper/api_wrapper/: __init__.py  converters.py  settings.py
certbot_plugin/: requirements.txt  setup.py
certbot_plugin/certbot_dns_devdns/_internal/: dns_devdns.py
conf/: named.conf  pdns.conf
devdnsbackend/: CMakeLists.txt  CmakeLists.foo.txt
devdnsbackend/cmake/: FindPQXX.cmake  Findgpgsqlbackend.cmake
devdnsbackend/include/uacme/: config.h  json.h  msg.h  uacme.c
devdnsbackend/src/: devdnsbackend.cpp  devdnsbackend.hpp  engine.cpp  logger.h  storage.cpp  test_engine_c_str.cpp  tests.cpp  tests2.cpp
devdnsbackend/tests/: CMakeLists.txt  main.cpp
